Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35157

wrong binlog timestamps on secondary nodes of a galera cluster

    XMLWordPrintable

Details

    Description

      Testcase to reproduce

      Create a 3 node testcluster.

      On all nodes

      wsrep_gtid_mode=1
      wsrep_gtid_domain_id=100
      server_id=100

      CREATE TABLE `t1` (`id` INT NOT NULL AUTO_INCREMENT,`c1` INT NOT NULL DEFAULT '0',`t1` DATETIME NOT NULL DEFAULT now() ON UPDATE NOW(),PRIMARY KEY (`id`));
       
      insert into t1 (c1) values (1);
      update t1 set c1 = 2 where c1 = 1;
      select sleep (61);
      insert into t1 (c1) values (3);
      update t1 set c1 = 4 where c1 = 3; 
      

      Node1:

      #241015  6:26:55 server id 100  end_log_pos 2014 CRC32 0xb2ffc8eb 	GTID 100-100-26 trans
      ### INSERT INTO `d1`.`t1`
      ### SET
      ###   @1=1 /* INT meta=0 nullable=0 is_null=0 */
      ###   @2=1 /* INT meta=0 nullable=0 is_null=0 */
      ###   @3='2024-10-15 06:26:55' /* DATETIME(0) meta=0 nullable=0 is_null=0 */
       
      #241015  6:26:55 server id 100  end_log_pos 2233 CRC32 0x435b6af7 	GTID 100-100-27 trans
      ### UPDATE `d1`.`t1`
       
      #241015  6:27:56 server id 100  end_log_pos 2470 CRC32 0xc4bc0bfa 	GTID 100-100-28 trans
      #Q> insert into t1 (c1) values (3)
       
      #241015  6:27:58 server id 100  end_log_pos 2689 CRC32 0xf55e6d7b 	GTID 100-100-29 trans
      ### UPDATE `d1`.`t1`
      

      binlog timestamps are fine as expected.

      Node2:

      #241015  6:18:52 server id 100  end_log_pos 1970 CRC32 0xf27fcb76 	GTID 100-100-26 trans
      #Q> insert into t1 (c1) values (1)
       
       
      #241015  6:23:33 server id 100  end_log_pos 2189 CRC32 0x1c769ec5 	GTID 100-100-27 trans
      #Q> update t1 set c1 = 2 where c1 = 1
       
      #241015  6:27:56 server id 100  end_log_pos 2426 CRC32 0x5d1a5f92 	GTID 100-100-28 trans
      #Q> insert into t1 (c1) values (3)
       
      #241015  6:26:53 server id 100  end_log_pos 2645 CRC32 0xb6436db4 	GTID 100-100-29 trans
      #Q> update t1 set c1 = 4 where c1 = 3
      

      So

      Example:
      Node1:

      #241015  6:26:55  GTID 100-100-26
      ###   @3='2024-10-15 06:26:55' /* DATETIME(0) meta=0 nullable=0 is_null=0 */
      

      Node2:

      #241015 6:18:52 server id 100 end_log_pos 1970 CRC32 0xf27fcb76 GTID 100-100-26

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              Richard Richard Stracke
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: