MDEV-35157 : wrong binlog timestamps on secondary nodes of a galera cluster

Problem was missing thd->set_time() before binlog event
execution in wsrep_apply_events.

Note that this commit does not contain mtr-testcase
because actual timestamps on binlog file depends the
actual time when events are executed and how long
their execution takes.